# kuppy-lite

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: build.yml  deploy.yml  docker-image.yml
{{cookiecutter.project_name}}/manifests/: deployment.yaml  service.yaml
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: app.py
